--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
       <li><a href="https://www.facebook.com/tylerbheaton" target='_blank'>facebook</a></li>
       <li><a href="https://github.com/theaton2" target="_blank">github</a></li>
     </ul>
+    <h3>This heading tests my workflow</h3>
+    <p>Cool I got my workflow to work</p>
   </body>
 </html>
