--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </ul>
     <h3>This heading tests my workflow</h3>
     <p>Cool I got my workflow to work</p>
-    <p>go to <a href="link.html">Links</a></p>
+    <p>go to <a href="links.html">Links</a></p>
   </body>
 </html>
